# Solitaire

./: CMakeLists.txt  Carte.cpp  Carte.h  ColonneCartes.cpp  ColonneCartes.h  Solitaire.cpp  Solitaire.h  jeuSolitaire.cpp
